--- a/lab-apis.ipynb
+++ b/lab-apis.ipynb
@@ -540,11 +540,198 @@
    "source": [
     "# Your answer here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d9991d9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting spotipy\n",
+      "  Downloading spotipy-2.25.1-py3-none-any.whl.metadata (5.1 kB)\n",
+      "Collecting redis>=3.5.3 (from spotipy)\n",
+      "  Downloading redis-5.2.1-py3-none-any.whl.metadata (9.1 kB)\n",
+      "Requirement already satisfied: requests>=2.25.0 in /opt/anaconda3/lib/python3.12/site-packages (from spotipy) (2.32.3)\n",
+      "Requirement already satisfied: urllib3>=1.26.0 in /opt/anaconda3/lib/python3.12/site-packages (from spotipy) (2.2.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.25.0->spotipy) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.25.0->spotipy) (3.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.25.0->spotipy) (2025.1.31)\n",
+      "Downloading spotipy-2.25.1-py3-none-any.whl (31 kB)\n",
+      "Downloading redis-5.2.1-py3-none-any.whl (261 kB)\n",
+      "Installing collected packages: redis, spotipy\n",
+      "Successfully installed redis-5.2.1 spotipy-2.25.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install spotipy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f83945b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🎵 Top Tracks List:\n",
+      "Bad Bunny: ['DtMF', 'BAILE INoLVIDABLE', 'EoO', 'NUEVAYoL', 'VOY A LLeVARTE PA PR']\n",
+      "Drake: ['NOKIA', 'DIE TRYING', 'One Dance', 'She Will', 'Passionfruit']\n",
+      "Taylor Swift: ['Cruel Summer', 'Fortnight (feat. Post Malone)', 'cardigan', 'Lover', 'august']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Importar librerías\n",
+    "import spotipy\n",
+    "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "\n",
+    "# 2. Tus credenciales de Spotify\n",
+    "CLIENT_ID = 'fc355b2d8f384a689ba89e4d0abd4a44' \n",
+    "CLIENT_SECRET = 'bd4bacfac8c74c5c99b6ab8bc4fa4381'\n",
+    "\n",
+    "# 3. Conectar con Spotify\n",
+    "sp = spotipy.Spotify(auth_manager=SpotifyClientCredentials(\n",
+    "    client_id=CLIENT_ID,\n",
+    "    client_secret=CLIENT_SECRET\n",
+    "))\n",
+    "\n",
+    "# 4. Definir tu lista de artistas favoritos\n",
+    "artists = [\"Bad Bunny\", \"Drake\", \"Taylor Swift\"]  # <-- Puedes cambiar estos nombres\n",
+    "\n",
+    "# 5. Función para obtener las top 5 tracks de un artista\n",
+    "def get_top_tracks(artist_name):\n",
+    "    result = sp.search(q=artist_name, limit=1)\n",
+    "    artist_id = result['tracks']['items'][0]['artists'][0]['id']\n",
+    "    top_tracks_data = sp.artist_top_tracks(artist_id)\n",
+    "    top_tracks = [track['name'] for track in top_tracks_data['tracks'][:5]]\n",
+    "    return top_tracks\n",
+    "\n",
+    "# 6. Obtener el top 5 tracks de cada artista\n",
+    "top_tracks_list = []\n",
+    "\n",
+    "for artist in artists:\n",
+    "    tracks = get_top_tracks(artist)\n",
+    "    top_tracks_list.append(tracks)\n",
+    "\n",
+    "# 7. Ver el resultado\n",
+    "print(\"🎵 Top Tracks List:\")\n",
+    "for idx, tracks in enumerate(top_tracks_list):\n",
+    "    print(f\"{artists[idx]}: {tracks}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "95d67dd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❗ No se encontraron playlists válidas.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Importar librerías y conectar a Spotify\n",
+    "import spotipy\n",
+    "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "\n",
+    "# 2. Tus credenciales de Spotify\n",
+    "CLIENT_ID = 'fc355b2d8f384a689ba89e4d0abd4a44'\n",
+    "CLIENT_SECRET = 'bd4bacfac8c74c5c99b6ab8bc4fa4381'\n",
+    "\n",
+    "# 3. Crear conexión a Spotify\n",
+    "sp = spotipy.Spotify(auth_manager=SpotifyClientCredentials(\n",
+    "    client_id=CLIENT_ID,\n",
+    "    client_secret=CLIENT_SECRET\n",
+    "))\n",
+    "\n",
+    "# 4. Buscar playlists famosas (por ejemplo \"Top Hits\")\n",
+    "search_results = sp.search(q=\"Top Hits\", type=\"playlist\", limit=5)\n",
+    "\n",
+    "# 5. Comprobar si se encontraron playlists\n",
+    "if search_results['playlists'] and search_results['playlists']['items']:\n",
+    "    # 🔥 Filtrar playlists válidas\n",
+    "    top_5_playlists = [p for p in search_results['playlists']['items'] if p is not None]\n",
+    "    \n",
+    "    if top_5_playlists:\n",
+    "        print(\"📚 Top 5 Playlists encontradas:\")\n",
+    "        for playlist in top_5_playlists:\n",
+    "            print(f\"Name: {playlist['name']}, ID: {playlist['id']}\")\n",
+    "        \n",
+    "        # 6. Elegir una playlist para explorar (usamos la primera encontrada)\n",
+    "        playlist_id = top_5_playlists[0]['id']\n",
+    "\n",
+    "        # 7. Ver detalles de esa playlist\n",
+    "        playlist_details = sp.playlist(playlist_id)\n",
+    "\n",
+    "        print(\"\\n📋 Playlist Details:\")\n",
+    "        print(\"Name:\", playlist_details['name'])\n",
+    "        print(\"Description:\", playlist_details['description'])\n",
+    "        print(\"Total Tracks:\", playlist_details['tracks']['total'])\n",
+    "\n",
+    "        # 8. Obtener los primeros 10 tracks de esa playlist\n",
+    "        tracks = sp.playlist_tracks(playlist_id)\n",
+    "        first_10_tracks = tracks['items'][:10]\n",
+    "\n",
+    "        print(\"\\n🎶 First 10 Tracks:\")\n",
+    "        for track_item in first_10_tracks:\n",
+    "            if track_item['track'] is not None:\n",
+    "                print(track_item['track']['name'])\n",
+    "\n",
+    "        # 9. Crear un diccionario donde cada Track -> Lista de Artistas\n",
+    "        track_artist_dict = {}\n",
+    "\n",
+    "        for track_item in first_10_tracks:\n",
+    "            if track_item['track'] is not None:\n",
+    "                track = track_item['track']\n",
+    "                track_name = track['name']\n",
+    "                artists = track['artists']\n",
+    "                artist_names = [artist['name'] for artist in artists]\n",
+    "                track_artist_dict[track_name] = artist_names\n",
+    "\n",
+    "        # 10. Mostrar el diccionario Track -> Artists\n",
+    "        print(\"\\n🎨 Track-Artists Dictionary:\")\n",
+    "        for track, artists in track_artist_dict.items():\n",
+    "            print(f\"{track}: {artists}\")\n",
+    "    else:\n",
+    "        print(\"❗ No se encontraron playlists válidas.\")\n",
+    "else:\n",
+    "    print(\"❗ No se encontraron playlists. Cambia el término de búsqueda.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c82fa1cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_5_playlists = [p for p in search_results['playlists']['items'] if p is not None]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fdea92a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -558,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
